[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
    "google-genai>=2.6.0",
    "google-generativeai>=0.8.6",
    "gunicorn>=26.0.0",
    "psycopg2-binary>=2.9.12",
    "python-telegram-bot[job-queue]>=22.7",
    "requests>=2.34.2",
    "discord.py>=2.3.2",
    "telegram>=0.0.1",
    "akinator>=2.0.2",
    "yt-dlp>=2026.6.9",
]
